added about me section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <img src="images/Avatar.jpg" alt="Avatar">
 
         <p>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid autem necessitatibus eaque quidem fugit sunt rerum sapiente esse illum? Asperiores consequatur ratione provident rem ab rerum, fugit aspernatur omnis! Ducimus.
+            Ravneet grew up in Reno, NV, she has worked in the field of construction and telecommunications.
+
         </p>
 
         </article>
