--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@
                 Module 1 Project For Bootcamp
     
             </p>
-            <a href="https://neetk962.github.io/Botanical-Express/"> <img id="Botanical-Express"   src="images/Botanical Exp, Screenshot.png" alt="Botanical-Express"> </a>
+            <a href="https://neetk962.github.io/Botanical-Express/" > <img id="Botanical-Express"   src="images/Botanical Exp, Screenshot.png" alt="Botanical-Express"> </a>
              <p>Project 1 for Bootcamp</p>
 
             <a href="https://chatty-cat-d7c479363922.herokuapp.com/"> <img id="chatty-cat"   src="images/Screenshot 2023-09-01 092819.png" alt="chatty-cat"> </a>
              <p>Project 2 for Bootcamp</p>
+             <a href="https://tic-tac-doh-37df013dc60d.herokuapp.com/"> <img id="tic-tac-doh" src="images/Screenshot 2023-10-19 230955.png" alt="tic-tac-doh"> </a>
+             <p>Project 3 for Bootcamp</p>
 
             </article>
 
